--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   country_state_city_pro: ^0.0.6
   file_picker: ^5.5.0
   pie_chart: ^5.4.0
+  http:
 
 dev_dependencies:
   flutter_test:
