Secured API Keys

--- a/backend/config.env
+++ b/backend/config.env
@@ -1,1 +1,3 @@
 JWT_SECRET=thozhil_mobile_app_token
+FIREBASE_API_KEY=AIzaSyBqmc6LDIhaYuU6wlcNK9o9QZeuezFerfI
+MONGODB_URI=mongodb+srv://adibala1306:ThozhilApp@thozhil.1rfasie.mongodb.net/
